# tccv2

tcc/: Makefile  README.md  compiled_code.json  main.py  pyproject.toml
tcc/contracts/: compiled_code.json  post.sol  test.sol
tcc/core/: auth.py  base.py  blockchain.py  check.py  content_parser.py  post.py  users.py
tcc/db/: connect.py  db.py
tcc/models/: post.py  user.py
tcc/router/: check.py  health.py  posts.py  token.py  users.py
tcc/scripts/: deploy.py  run.py  setup.sh  setup_db.py
tcc/tests/acceptance/router/: test_router_acceptance.py
